// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FloatingLabel correctly when disabled 1`] = `
<div
  data-radium={true}
>
  <div>
    <label
      data-radium={true}
      htmlFor={undefined}
      style={
        Object {
          "color": "#BDBDBD",
          "cursor": "not-allowed",
          "fontSize": "16px",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "pointerEvents": "auto",
          "position": "absolute",
          "transform": "scale(1) translate(8px, 17px)",
          "transformOrigin": "left top",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "zIndex": 1,
        }
      }
    >
      Label Text
    </label>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders FloatingLabel correctly when disabled and float 1`] = `
<div
  data-radium={true}
>
  <div>
    <label
      data-radium={true}
      htmlFor={undefined}
      style={
        Object {
          "color": "#BDBDBD",
          "cursor": "not-allowed",
          "fontSize": "16px",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "transform": "scale(0.85) translate(8px, 6px)",
          "transformOrigin": "left top",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "zIndex": 1,
        }
      }
    >
      Label Text
    </label>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders FloatingLabel correctly when floated 1`] = `
<div
  data-radium={true}
>
  <div>
    <label
      data-radium={true}
      htmlFor={undefined}
      style={
        Object {
          "color": "#757575",
          "cursor": "inherit",
          "fontSize": "16px",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "transform": "scale(0.85) translate(8px, 6px)",
          "transformOrigin": "left top",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "zIndex": 1,
        }
      }
    >
      Label Text
    </label>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders FloatingLabel correctly when isActive and float 1`] = `
<div
  data-radium={true}
>
  <div>
    <label
      data-radium={true}
      htmlFor={undefined}
      style={
        Object {
          "color": "#43B02A",
          "cursor": "inherit",
          "fontSize": "16px",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "transform": "scale(0.85) translate(8px, 6px)",
          "transformOrigin": "left top",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "zIndex": 1,
        }
      }
    >
      Label Text
    </label>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders FloatingLabel correctly when not floating 1`] = `
<div
  data-radium={true}
>
  <div>
    <label
      data-radium={true}
      htmlFor={undefined}
      style={
        Object {
          "color": "#757575",
          "cursor": "text",
          "fontSize": "16px",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "pointerEvents": "auto",
          "position": "absolute",
          "transform": "scale(1) translate(8px, 17px)",
          "transformOrigin": "left top",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "zIndex": 1,
        }
      }
    >
      Label Text
    </label>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
